--- a/Achievement/Base.lproj/Main.storyboard
+++ b/Achievement/Base.lproj/Main.storyboard
@@ -218,7 +218,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="290" height="38"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリー" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4o-Ie-Slo" userLabel="CategoryNameLabel">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="カテゴリー" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4o-Ie-Slo" userLabel="CategoryNameLabel">
                                                     <rect key="frame" x="50" y="8" width="220" height="22"/>
                                                     <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -312,7 +312,7 @@
                         <outlet property="toCategoryButton" destination="eYd-cs-Gx2" id="hmP-PE-ASY"/>
                         <outlet property="toDateButton" destination="vCh-12-Xti" id="fCy-yg-qq5"/>
                         <segue destination="e4n-rj-oP3" kind="show" identifier="toCategoryHistory" id="9zx-fE-eOh"/>
-                        <segue destination="ulU-U5-CSR" kind="show" id="zlV-nB-Apk"/>
+                        <segue destination="ulU-U5-CSR" kind="show" identifier="toDetailSegue" id="zlV-nB-Apk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G7q-VN-RjB" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -428,7 +428,7 @@
                         <outlet property="categoryTitleLabel" destination="UuS-qW-K4G" id="UQF-sf-bss"/>
                         <outlet property="colorView" destination="90G-5X-XBM" id="OpC-eP-A5j"/>
                         <outlet property="tableView" destination="a0r-Yj-HUQ" id="cuP-0F-fcb"/>
-                        <segue destination="ulU-U5-CSR" kind="show" id="guu-7D-QWM"/>
+                        <segue destination="ulU-U5-CSR" kind="show" identifier="toDetailSegue" id="guu-7D-QWM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s0O-df-JGt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -1117,19 +1117,15 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="" image="bar_graph" id="hn4-aE-WU9"/>
-                    <connections>
-                        <outlet property="characterImage" destination="IFK-mP-sHK" id="Fhi-mD-56e"/>
-                        <outlet property="commentLbl" destination="GH2-S5-CqS" id="sU1-FG-ujZ"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-401" y="344"/>
+            <point key="canvasLocation" x="-332" y="343"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Detail View Controller-->
         <scene sceneID="JSE-Ok-Zf7">
             <objects>
-                <viewController id="ulU-U5-CSR" sceneMemberID="viewController">
+                <viewController id="ulU-U5-CSR" customClass="AddDetailViewController" customModule="Achievement" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jKC-sI-5oz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1148,65 +1144,93 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PYU-cD-KLb" customClass="RoudedView" customModule="Achievement" customModuleProvider="target">
                                 <rect key="frame" x="20" y="124" width="280" height="300"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7O3-p0-4iA">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="1" translatesAutoresizingMaskIntoConstraints="NO" id="7O3-p0-4iA">
                                         <rect key="frame" x="20" y="20" width="240" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="25" id="eP3-U3-VtA"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="25"/>
+                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="20"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SCq-5w-4bn">
-                                        <rect key="frame" x="191" y="250" width="36" height="36"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SCq-5w-4bn">
+                                        <rect key="frame" x="204" y="249" width="36" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="36" id="K8z-NU-fkq"/>
+                                            <constraint firstAttribute="width" constant="36" id="dWj-69-4d8"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="18"/>
                                         <state key="normal" title="保存">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="saveButtonClicked:" destination="ulU-U5-CSR" eventType="touchUpInside" id="fxq-Rs-XgO"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WpV-DJ-jlw">
-                                        <rect key="frame" x="26" y="251" width="90" height="36"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WpV-DJ-jlw">
+                                        <rect key="frame" x="20" y="249" width="90" height="36"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="90" id="Rxf-Qk-x1I"/>
+                                            <constraint firstAttribute="height" constant="36" id="uP2-iU-QW1"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="18"/>
                                         <state key="normal" title="キャンセル">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <action selector="cancelButtonClicked:" destination="ulU-U5-CSR" eventType="touchUpInside" id="CFH-et-oJQ"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.36862745099999999" green="0.76078431369999999" blue="0.12549019610000001" alpha="0.65579516270000004" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
+                                    <constraint firstItem="WpV-DJ-jlw" firstAttribute="leading" secondItem="PYU-cD-KLb" secondAttribute="leading" constant="20" id="1VG-cw-DDZ"/>
                                     <constraint firstItem="7O3-p0-4iA" firstAttribute="top" secondItem="PYU-cD-KLb" secondAttribute="top" constant="20" id="ExD-l8-fqx"/>
+                                    <constraint firstAttribute="bottom" secondItem="WpV-DJ-jlw" secondAttribute="bottom" constant="15" id="K2b-mR-rro"/>
                                     <constraint firstAttribute="trailing" secondItem="7O3-p0-4iA" secondAttribute="trailing" constant="20" id="Kse-un-F60"/>
+                                    <constraint firstAttribute="bottom" secondItem="SCq-5w-4bn" secondAttribute="bottom" constant="15" id="XBF-wN-ofj"/>
                                     <constraint firstAttribute="height" constant="300" id="hdE-6S-QDf"/>
+                                    <constraint firstAttribute="trailing" secondItem="SCq-5w-4bn" secondAttribute="trailing" constant="40" id="iO9-Jn-d9R"/>
                                     <constraint firstItem="7O3-p0-4iA" firstAttribute="leading" secondItem="PYU-cD-KLb" secondAttribute="leading" constant="20" id="y0r-hC-kIE"/>
                                 </constraints>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="詳細なメモを追加する" translatesAutoresizingMaskIntoConstraints="NO" id="hZv-eZ-QEX">
-                                <rect key="frame" x="40" y="220" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="詳細なメモを残す。" translatesAutoresizingMaskIntoConstraints="NO" id="hZv-eZ-QEX">
+                                <rect key="frame" x="36" y="199" width="248" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="kLv-GP-4Zd"/>
+                                </constraints>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" name="Farah" family="Farah" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="HiraMaruProN-W4" family="Hiragino Maru Gothic ProN" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="hZv-eZ-QEX" firstAttribute="centerX" secondItem="jKC-sI-5oz" secondAttribute="centerX" id="1Y9-Aj-exl"/>
                             <constraint firstItem="Y3W-Y6-bZc" firstAttribute="trailing" secondItem="4xx-t7-0Lb" secondAttribute="trailing" id="1l9-6h-cKZ"/>
                             <constraint firstItem="Y3W-Y6-bZc" firstAttribute="trailing" secondItem="PYU-cD-KLb" secondAttribute="trailing" constant="20" id="56e-PN-Q7h"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hZv-eZ-QEX" secondAttribute="trailing" constant="20" id="FG8-pk-4pv"/>
+                            <constraint firstItem="hZv-eZ-QEX" firstAttribute="centerY" secondItem="jKC-sI-5oz" secondAttribute="centerY" id="OBG-Zx-WVP"/>
                             <constraint firstItem="PYU-cD-KLb" firstAttribute="leading" secondItem="Y3W-Y6-bZc" secondAttribute="leading" constant="20" id="S5x-hZ-Uwn"/>
                             <constraint firstItem="4xx-t7-0Lb" firstAttribute="leading" secondItem="jKC-sI-5oz" secondAttribute="leading" id="T55-uT-qCb"/>
+                            <constraint firstItem="hZv-eZ-QEX" firstAttribute="leading" secondItem="jKC-sI-5oz" secondAttribute="leadingMargin" constant="20" id="VAL-7z-XrK"/>
                             <constraint firstItem="4xx-t7-0Lb" firstAttribute="top" secondItem="Y3W-Y6-bZc" secondAttribute="top" id="nWE-Xf-gnh"/>
                             <constraint firstItem="PYU-cD-KLb" firstAttribute="centerY" secondItem="jKC-sI-5oz" secondAttribute="centerY" id="sZu-vp-F3w"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Y3W-Y6-bZc"/>
                     </view>
                     <navigationItem key="navigationItem" id="kbg-6Q-Lvw"/>
+                    <connections>
+                        <outlet property="cancelButton" destination="WpV-DJ-jlw" id="9VU-tm-p0O"/>
+                        <outlet property="saveButton" destination="SCq-5w-4bn" id="1mY-4Q-YXD"/>
+                        <outlet property="textView" destination="hZv-eZ-QEX" id="QGh-kO-OxI"/>
+                        <outlet property="titleLabel" destination="7O3-p0-4iA" id="A8E-jz-CoY"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RMX-lm-wa7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2291" y="1410"/>
+            <point key="canvasLocation" x="2276" y="1425"/>
         </scene>
     </scenes>
     <resources>
